--- a/front/src/style.css
+++ b/front/src/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 html,
 body,
 div,
@@ -121,4 +123,10 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+#App {
+  margin: 1.5em auto;
+  max-width: 1200px;
+  column-gap: 1.5em;
 }
