--- a/front/src/style.css
+++ b/front/src/style.css
@@ -8,6 +8,12 @@
     format("opentype");
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 html,
 body,
 div,
@@ -96,6 +102,7 @@ video {
   font: inherit;
   font-family: DNFBitBitv2;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -134,6 +141,11 @@ table {
   border-spacing: 0;
 }
 
+input,
+input::placeholder {
+  font-family: DNFBitBitv2;
+}
+
 #app {
   margin: 1.5em auto;
   max-width: 1200px;
@@ -141,4 +153,7 @@ table {
 }
 
 .searchInput {
+  width: 100%;
+  font-size: 40px;
+  padding: 15px 20px;
 }
