--- a/front/src/style.css
+++ b/front/src/style.css
@@ -157,3 +157,32 @@ input::placeholder {
   font-size: 40px;
   padding: 15px 20px;
 }
+
+.searchResult {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(250px, 1fr));
+  grid-auto-rows: 1fr;
+  grid-gap: 10px;
+  gap: 10px;
+
+  margin-top: 30px;
+}
+
+.item {
+  background-color: #eee;
+  margin: 0 0 1em;
+  width: 100%;
+}
+
+.item:hover {
+  cursor: pointer;
+}
+
+.searchResult img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* @media screen and () {
+} */
